@@ -1,5 +1,15 @@
 2005-04-06  Inge Wallin  <inge@lysator.liu.se>
 
+	Fix line specific settings
+	* kchartConfigDialog.{h,cc} (linepage3d): resurrected page
+	(all members except 
+	* kchartLine3dConfigPage.cc (lineMarkers): new method
+	(all 3d stuff): disabled
+	* kchartParameterConfigPage.cc (lineMarker): moved to the line
+	page.
+
+	----------------------------------------------------------------
+
 	Fix pie specific settings.
 	* kchartConfigDialog.cc (constructor): Move all type specific
 	settings immediately after the subtype page.
